# provenance-backend

./: .gitignore  PLAN.md  README.md  docker-compose.yml  openapi.v1.yaml  package.json  pnpm-lock.yaml
src/: config.ts  types.ts
src/api/: server.ts
src/mcp/: server.ts
src/services/: attestationVerifier.ts  provenanceService.ts  worldVerifier.ts
src/storage/: createStore.ts  jsonStore.ts  postgresStore.ts  store.ts
src/tee/: adapter.ts  httpAdapter.ts  mockAdapter.ts
src/utils/: hash.ts
tee-attestor-rs/: Cargo.toml
tee-attestor-rs/src/: main.rs
tests/: programmatic.test.ts
