[package]
name = "tee-attestor-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.46", features = ["rt-multi-thread", "macros", "net"] }
uuid = { version = "1.18", features = ["v4"] }
livy-tee = { path = "../../../livy-tee", default-features = false }
